[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "demogpt"
version = "1.2.6"
description = "Auto Gen-AI App Generator with the Power of Llama 2"
authors = ["Melih Unsal <melih@demogpt.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/melih-unsal/DemoGPT"
packages = [
    { include = "demogpt" }
]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "*"
altair = "<5"
langchain = "*"
langchain_experimental = "*"
openai = "*"
python-dotenv = "*"
unstructured = "*"
pdf2image = "*"
pdfminer-six = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
demogpt = "demogpt.cli:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/melih-unsal/DemoGPT"
