[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "demogpt"
version = "1.2.7"
description = "Autonomous AI Agent for Gen-AI App Generation "
authors = ["Melih Unsal <melihunsal.ai@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/melih-unsal/DemoGPT"
packages = [
    { include = "demogpt" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "<2.0.0"
streamlit = "*"
altair = "<5"
langchain = "*"
langchain_experimental = "*"
langchain_openai = "*"
openai = "*"
tiktoken = "*"
python-dotenv = "*"
unstructured = "*"
pdf2image = "*"
pdfminer-six = "*"
autopep8 = "*"
numexpr = "*"
flake8 = "*"
duckduckgo-search = "6.3.2"
wikipedia = "1.4.0"
pyowm = "3.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
demogpt = "demogpt.cli:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/melih-unsal/DemoGPT"
